@@ -21,13 +21,8 @@ package org.apache.pinot.queries;
 import java.io.File;
 import java.net.URL;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
-import java.util.concurrent.TimeUnit;
 import org.apache.commons.io.FileUtils;
 import org.apache.pinot.common.response.broker.BrokerResponseNative;
 import org.apache.pinot.common.response.broker.ResultTable;
@@ -40,17 +35,11 @@ import org.apache.pinot.segment.spi.ImmutableSegment;
 import org.apache.pinot.segment.spi.IndexSegment;
 import org.apache.pinot.segment.spi.creator.SegmentGeneratorConfig;
 import org.apache.pinot.segment.spi.creator.SegmentIndexCreationDriver;
-import org.apache.pinot.segment.spi.index.ForwardIndexConfig;
-import org.apache.pinot.segment.spi.index.RangeIndexConfig;
-import org.apache.pinot.segment.spi.index.StandardIndexes;
 import org.apache.pinot.spi.config.table.FieldConfig;
-import org.apache.pinot.spi.config.table.IndexConfig;
 import org.apache.pinot.spi.config.table.TableConfig;
 import org.apache.pinot.spi.config.table.TableType;
-import org.apache.pinot.spi.data.FieldSpec;
+import org.apache.pinot.spi.data.FieldSpec.DataType;
 import org.apache.pinot.spi.data.Schema;
-import org.apache.pinot.spi.data.TimeGranularitySpec;
-import org.apache.pinot.spi.utils.ReadMode;
 import org.apache.pinot.spi.utils.builder.TableConfigBuilder;
 import org.testng.Assert;
 import org.testng.annotations.AfterMethod;
@@ -85,139 +74,99 @@ import static org.testng.Assert.assertTrue;
  * </ul>
  */
 public class ForwardIndexDisabledSingleValueQueriesTest extends BaseQueriesTest {
+  private static final File INDEX_DIR =
+      new File(FileUtils.getTempDirectory(), ForwardIndexDisabledSingleValueQueriesTest.class.getSimpleName());
   private static final String AVRO_DATA = "data" + File.separator + "test_data-sv.avro";
-  private static final String SEGMENT_NAME_1 = "testTable_126164076_167572857";
-  private static final String SEGMENT_NAME_2 = "testTable_126164076_167572858";
-  private static final File INDEX_DIR = new File(FileUtils.getTempDirectory(),
-      "ForwardIndexDisabledSingleValueQueriesTest");
+  private static final String RAW_TABLE_NAME = "testTable";
+  private static final String SEGMENT_NAME = "testSegment";
 
   private static final String SELECT_STAR_QUERY = "SELECT * FROM testTable";
 
-  // Hard-coded query filter.
+  //@formatter:off
+  private static final Schema SCHEMA = new Schema.SchemaBuilder().setSchemaName(RAW_TABLE_NAME)
+      .addMetric("column1", DataType.INT)
+      .addMetric("column3", DataType.INT)
+      .addSingleValueDimension("column5", DataType.STRING)
+      .addSingleValueDimension("column6", DataType.INT)
+      .addSingleValueDimension("column7", DataType.INT)
+      .addSingleValueDimension("column9", DataType.INT)
+      .addSingleValueDimension("column11", DataType.STRING)
+      .addSingleValueDimension("column12", DataType.STRING)
+      .addMetric("column17", DataType.INT)
+      .addMetric("column18", DataType.INT)
+      .addDateTime("daysSinceEpoch", DataType.INT, "EPOCH|DAYS", "1:DAYS")
+      .build();
+
+  // Hard-coded query filter
   private static final String FILTER = " WHERE column1 > 100000000"
       + " AND column3 BETWEEN 20000000 AND 1000000000"
       + " AND column5 = 'gFuH'"
       + " AND (column6 < 500000000 OR column11 NOT IN ('t', 'P'))"
       + " AND daysSinceEpoch = 126164076";
-
-  // Build the segment schema.
-  private static final Schema SCHEMA = new Schema.SchemaBuilder().setSchemaName("testTable")
-      .addMetric("column1", FieldSpec.DataType.INT)
-      .addMetric("column3", FieldSpec.DataType.INT).addSingleValueDimension("column5", FieldSpec.DataType.STRING)
-      .addSingleValueDimension("column6", FieldSpec.DataType.INT)
-      .addSingleValueDimension("column7", FieldSpec.DataType.INT)
-      .addSingleValueDimension("column9", FieldSpec.DataType.INT)
-      .addSingleValueDimension("column11", FieldSpec.DataType.STRING)
-      .addSingleValueDimension("column12", FieldSpec.DataType.STRING).addMetric("column17", FieldSpec.DataType.INT)
-      .addMetric("column18", FieldSpec.DataType.INT)
-      .addTime(new TimeGranularitySpec(FieldSpec.DataType.INT, TimeUnit.DAYS, "daysSinceEpoch"), null).build();
+  //@formatter:on
 
   private IndexSegment _indexSegment;
-  // Contains 2 index segments, one with 2 columns with forward index disabled, and the other with just 1.
+  // Contains 2 identical index segments
   private List<IndexSegment> _indexSegments;
 
-  private TableConfig _tableConfig;
-  private List<String> _invertedIndexColumns;
-  private List<String> _forwardIndexDisabledColumns;
-  private List<String> _noDictionaryColumns;
-
   @BeforeMethod
-  public void buildAndLoadSegment()
+  public void setUp()
       throws Exception {
     FileUtils.deleteQuietly(INDEX_DIR);
 
-    // Get resource file path.
+    TableConfig tableConfig =
+        createTableConfig(List.of("column9"), List.of("column6", "column7", "column11", "column17", "column18"),
+            List.of("column6"), List.of("column6", "column7"));
+
     URL resource = getClass().getClassLoader().getResource(AVRO_DATA);
     assertNotNull(resource);
-    String filePath = resource.getFile();
+    String avroFile = resource.getFile();
 
-    createSegment(filePath, SEGMENT_NAME_1);
-    createSegment(filePath, SEGMENT_NAME_2);
-
-    ImmutableSegment immutableSegment1 = loadSegmentWithMetadataChecks(SEGMENT_NAME_1);
-    ImmutableSegment immutableSegment2 = loadSegmentWithMetadataChecks(SEGMENT_NAME_2);
-
-    _indexSegment = immutableSegment1;
-    _indexSegments = Arrays.asList(immutableSegment1, immutableSegment2);
-  }
-
-  private void createSegment(String filePath, String segmentName)
-      throws Exception {
-    // Create field configs for the no forward index columns
-    _noDictionaryColumns = Arrays.asList("column9");
-    List<FieldConfig> fieldConfigList = new ArrayList<>();
-    fieldConfigList.add(new FieldConfig("column6", FieldConfig.EncodingType.DICTIONARY, Collections.emptyList(), null,
-        Collections.singletonMap(FieldConfig.FORWARD_INDEX_DISABLED, Boolean.TRUE.toString())));
-    if (segmentName.equals(SEGMENT_NAME_1)) {
-      fieldConfigList.add(new FieldConfig("column7", FieldConfig.EncodingType.DICTIONARY, Collections.emptyList(),
-          null, Collections.singletonMap(FieldConfig.FORWARD_INDEX_DISABLED, Boolean.TRUE.toString())));
-
-      // Build table config based on segment 1 as it contains both columns under no forward index
-      _tableConfig =
-          new TableConfigBuilder(TableType.OFFLINE).setTableName("testTable").setTimeColumnName("daysSinceEpoch")
-              .setFieldConfigList(fieldConfigList).setRangeIndexColumns(Arrays.asList("column6"))
-              .setNoDictionaryColumns(_noDictionaryColumns).build();
-    }
-
-    // Create the segment generator config.
-    SegmentGeneratorConfig segmentGeneratorConfig = new SegmentGeneratorConfig(_tableConfig, SCHEMA);
-    segmentGeneratorConfig.setInputFilePath(filePath);
-    segmentGeneratorConfig.setTableName("testTable");
-    segmentGeneratorConfig.setOutDir(INDEX_DIR.getAbsolutePath());
-    segmentGeneratorConfig.setSegmentName(segmentName);
-    // The segment generation code in SegmentColumnarIndexCreator will throw
-    // exception if start and end time in time column are not in acceptable
-    // range. For this test, we first need to fix the input avro data
-    // to have the time column values in allowed range. Until then, the check
-    // is explicitly disabled
-    segmentGeneratorConfig.setSkipTimeValueCheck(true);
-    _invertedIndexColumns = Arrays.asList("column6", "column7", "column11", "column17", "column18");
-    segmentGeneratorConfig.setIndexOn(StandardIndexes.inverted(), IndexConfig.ENABLED, _invertedIndexColumns);
-    segmentGeneratorConfig.setRawIndexCreationColumns(_noDictionaryColumns);
-
-    _forwardIndexDisabledColumns = new ArrayList<>(Arrays.asList("column6", "column7"));
-    segmentGeneratorConfig.setIndexOn(StandardIndexes.forward(), ForwardIndexConfig.DISABLED,
-        _forwardIndexDisabledColumns);
-    RangeIndexConfig rangeIndexConfig = RangeIndexConfig.DEFAULT;
-    segmentGeneratorConfig.setIndexOn(StandardIndexes.range(), rangeIndexConfig, "column6");
-
-    // Build the index segment.
+    SegmentGeneratorConfig generatorConfig = new SegmentGeneratorConfig(tableConfig, SCHEMA);
+    generatorConfig.setInputFilePath(avroFile);
+    generatorConfig.setOutDir(INDEX_DIR.getAbsolutePath());
+    generatorConfig.setSegmentName(SEGMENT_NAME);
+    generatorConfig.setSkipTimeValueCheck(true);
     SegmentIndexCreationDriver driver = new SegmentIndexCreationDriverImpl();
-    driver.init(segmentGeneratorConfig);
+    driver.init(generatorConfig);
     driver.build();
-  }
 
-  private ImmutableSegment loadSegmentWithMetadataChecks(String segmentName)
-      throws Exception {
-    IndexLoadingConfig indexLoadingConfig = new IndexLoadingConfig();
-    indexLoadingConfig.setTableConfig(_tableConfig);
-    indexLoadingConfig.setInvertedIndexColumns(new HashSet<>(_invertedIndexColumns));
-    indexLoadingConfig.setForwardIndexDisabledColumns(new HashSet<>(_forwardIndexDisabledColumns));
-    indexLoadingConfig.setRangeIndexColumns(new HashSet<>(Arrays.asList("column6")));
-    indexLoadingConfig.setNoDictionaryColumns(new HashSet<>(_noDictionaryColumns));
-    indexLoadingConfig.setReadMode(ReadMode.heap);
-
-    ImmutableSegment immutableSegment = ImmutableSegmentLoader.load(new File(INDEX_DIR, segmentName),
-        indexLoadingConfig);
-
-    Map<String, ColumnMetadata> columnMetadataMap1 = immutableSegment.getSegmentMetadata().getColumnMetadataMap();
-    columnMetadataMap1.forEach((column, metadata) -> {
+    ImmutableSegment segment =
+        ImmutableSegmentLoader.load(new File(INDEX_DIR, SEGMENT_NAME), new IndexLoadingConfig(tableConfig, SCHEMA));
+    Map<String, ColumnMetadata> columnMetadataMap = segment.getSegmentMetadata().getColumnMetadataMap();
+    for (Map.Entry<String, ColumnMetadata> entry : columnMetadataMap.entrySet()) {
+      String column = entry.getKey();
+      ColumnMetadata metadata = entry.getValue();
       if (column.equals("column6") || column.equals("column7")) {
         assertTrue(metadata.hasDictionary());
         assertTrue(metadata.isSingleValue());
-        assertNull(immutableSegment.getForwardIndex(column));
+        assertNull(segment.getForwardIndex(column));
       } else {
-        assertNotNull(immutableSegment.getForwardIndex(column));
+        assertNotNull(segment.getForwardIndex(column));
       }
-    });
+    }
 
-    return immutableSegment;
+    _indexSegment = segment;
+    _indexSegments = List.of(segment, segment);
+  }
+
+  private TableConfig createTableConfig(List<String> noDictionaryColumns, List<String> invertedIndexColumns,
+      List<String> rangeIndexColumns, List<String> forwardIndexDisabledColumns) {
+    List<FieldConfig> fieldConfigs = new ArrayList<>(forwardIndexDisabledColumns.size());
+    for (String column : forwardIndexDisabledColumns) {
+      fieldConfigs.add(new FieldConfig(column, FieldConfig.EncodingType.DICTIONARY, List.of(), null,
+          Map.of(FieldConfig.FORWARD_INDEX_DISABLED, "true")));
+    }
+    return new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME).setTimeColumnName("daysSinceEpoch")
+        .setNoDictionaryColumns(noDictionaryColumns).setInvertedIndexColumns(invertedIndexColumns)
+        .setCreateInvertedIndexDuringSegmentGeneration(true).setRangeIndexColumns(rangeIndexColumns)
+        .setFieldConfigList(fieldConfigs).build();
   }
 
   @AfterMethod
-  public void deleteAndDestroySegment() {
+  public void tearDown() {
+    _indexSegment.destroy();
     FileUtils.deleteQuietly(INDEX_DIR);
-    _indexSegments.forEach((IndexSegment::destroy));
   }
 
   @Override
@@ -1933,40 +1882,24 @@ public class ForwardIndexDisabledSingleValueQueriesTest extends BaseQueriesTest 
       throws Exception {
     // Now disable forward index for column9 and column11 in the index loading config, while enabling inverted index
     // and range index for column9. column11 already has inverted index enabled.
-    IndexLoadingConfig indexLoadingConfig = new IndexLoadingConfig();
-    indexLoadingConfig.setTableConfig(_tableConfig);
-    Set<String> invertedIndexEnabledColumns = new HashSet<>(_invertedIndexColumns);
-    invertedIndexEnabledColumns.add("column9");
-    indexLoadingConfig.setInvertedIndexColumns(invertedIndexEnabledColumns);
-    Set<String> forwardIndexDisabledColumns = new HashSet<>(_forwardIndexDisabledColumns);
-    forwardIndexDisabledColumns.add("column9");
-    forwardIndexDisabledColumns.add("column11");
-    indexLoadingConfig.setForwardIndexDisabledColumns(forwardIndexDisabledColumns);
-    indexLoadingConfig.setRangeIndexColumns(new HashSet<>(Arrays.asList("column6", "column9")));
-    indexLoadingConfig.removeNoDictionaryColumns("column9");
-    indexLoadingConfig.setReadMode(ReadMode.heap);
+    TableConfig tableConfig =
+        createTableConfig(List.of(), List.of("column6", "column7", "column9", "column11", "column17", "column18"),
+            List.of("column6", "column9"), List.of("column6", "column7", "column9", "column11"));
+    IndexLoadingConfig indexLoadingConfig = new IndexLoadingConfig(tableConfig, SCHEMA);
 
     // Reload the segments to pick up the new configs
-    File indexDir = new File(INDEX_DIR, SEGMENT_NAME_1);
-    ImmutableSegment immutableSegment1 = reloadSegment(indexDir, indexLoadingConfig, SCHEMA);
-    indexDir = new File(INDEX_DIR, SEGMENT_NAME_2);
-    ImmutableSegment immutableSegment2 = reloadSegment(indexDir, indexLoadingConfig, SCHEMA);
-    _indexSegment = immutableSegment1;
-    _indexSegments = Arrays.asList(immutableSegment1, immutableSegment2);
+    File indexDir = new File(INDEX_DIR, SEGMENT_NAME);
+    ImmutableSegment segment = reloadSegment(indexDir, indexLoadingConfig, SCHEMA);
+    _indexSegment.destroy();
+    _indexSegment = segment;
+    _indexSegments = List.of(segment, segment);
 
-    assertNull(immutableSegment1.getForwardIndex("column9"));
-    assertNotNull(immutableSegment1.getInvertedIndex("column9"));
-    assertNotNull(immutableSegment1.getDictionary("column9"));
-    assertNull(immutableSegment1.getForwardIndex("column11"));
-    assertNotNull(immutableSegment1.getInvertedIndex("column11"));
-    assertNotNull(immutableSegment1.getDictionary("column11"));
-
-    assertNull(immutableSegment2.getForwardIndex("column9"));
-    assertNotNull(immutableSegment2.getInvertedIndex("column9"));
-    assertNotNull(immutableSegment2.getDictionary("column9"));
-    assertNull(immutableSegment2.getForwardIndex("column11"));
-    assertNotNull(immutableSegment2.getInvertedIndex("column11"));
-    assertNotNull(immutableSegment2.getDictionary("column11"));
+    assertNull(segment.getForwardIndex("column9"));
+    assertNotNull(segment.getInvertedIndex("column9"));
+    assertNotNull(segment.getDictionary("column9"));
+    assertNull(segment.getForwardIndex("column11"));
+    assertNotNull(segment.getInvertedIndex("column11"));
+    assertNotNull(segment.getDictionary("column11"));
   }
 
   private void reenableForwardIndexForSomeColumns()
@@ -1974,44 +1907,26 @@ public class ForwardIndexDisabledSingleValueQueriesTest extends BaseQueriesTest 
     // Now re-enable forward index for column9 and column11 in the index loading config, while disabling inverted index
     // and range index for column9. column11 already had inverted index enabled so leave it as is.
     // Also re-enable forward index for column6
-    IndexLoadingConfig indexLoadingConfig = new IndexLoadingConfig();
-    indexLoadingConfig.setTableConfig(_tableConfig);
-    Set<String> invertedIndexEnabledColumns = new HashSet<>(_invertedIndexColumns);
-    invertedIndexEnabledColumns.remove("column9");
-    indexLoadingConfig.setInvertedIndexColumns(invertedIndexEnabledColumns);
-    Set<String> forwardIndexDisabledColumns = new HashSet<>(_forwardIndexDisabledColumns);
-    forwardIndexDisabledColumns.remove("column6");
-    indexLoadingConfig.setForwardIndexDisabledColumns(forwardIndexDisabledColumns);
-    indexLoadingConfig.setRangeIndexColumns(new HashSet<>(Collections.singletonList("column6")));
-    indexLoadingConfig.addNoDictionaryColumns("column9");
-    indexLoadingConfig.setReadMode(ReadMode.heap);
+    TableConfig tableConfig =
+        createTableConfig(List.of("column9"), List.of("column6", "column7", "column11", "column17", "column18"),
+            List.of("column6"), List.of("column7"));
+    IndexLoadingConfig indexLoadingConfig = new IndexLoadingConfig(tableConfig, SCHEMA);
 
     // Reload the segments to pick up the new configs
-    File indexDir = new File(INDEX_DIR, SEGMENT_NAME_1);
-    ImmutableSegment immutableSegment1 = reloadSegment(indexDir, indexLoadingConfig, SCHEMA);
-    indexDir = new File(INDEX_DIR, SEGMENT_NAME_2);
-    ImmutableSegment immutableSegment2 = reloadSegment(indexDir, indexLoadingConfig, SCHEMA);
-    _indexSegment = immutableSegment1;
-    _indexSegments = Arrays.asList(immutableSegment1, immutableSegment2);
+    File indexDir = new File(INDEX_DIR, SEGMENT_NAME);
+    ImmutableSegment segment = reloadSegment(indexDir, indexLoadingConfig, SCHEMA);
+    _indexSegment.destroy();
+    _indexSegment = segment;
+    _indexSegments = List.of(segment, segment);
 
-    assertNotNull(immutableSegment1.getForwardIndex("column9"));
-    assertNull(immutableSegment1.getInvertedIndex("column9"));
-    assertNull(immutableSegment1.getDictionary("column9"));
-    assertNotNull(immutableSegment1.getForwardIndex("column11"));
-    assertNotNull(immutableSegment1.getInvertedIndex("column11"));
-    assertNotNull(immutableSegment1.getDictionary("column11"));
-    assertNotNull(immutableSegment1.getForwardIndex("column6"));
-    assertNotNull(immutableSegment1.getInvertedIndex("column6"));
-    assertNotNull(immutableSegment1.getDictionary("column6"));
-
-    assertNotNull(immutableSegment2.getForwardIndex("column9"));
-    assertNull(immutableSegment2.getInvertedIndex("column9"));
-    assertNull(immutableSegment2.getDictionary("column9"));
-    assertNotNull(immutableSegment2.getForwardIndex("column11"));
-    assertNotNull(immutableSegment2.getInvertedIndex("column11"));
-    assertNotNull(immutableSegment2.getDictionary("column11"));
-    assertNotNull(immutableSegment2.getForwardIndex("column6"));
-    assertNotNull(immutableSegment2.getInvertedIndex("column6"));
-    assertNotNull(immutableSegment2.getDictionary("column6"));
+    assertNotNull(segment.getForwardIndex("column9"));
+    assertNull(segment.getInvertedIndex("column9"));
+    assertNull(segment.getDictionary("column9"));
+    assertNotNull(segment.getForwardIndex("column11"));
+    assertNotNull(segment.getInvertedIndex("column11"));
+    assertNotNull(segment.getDictionary("column11"));
+    assertNotNull(segment.getForwardIndex("column6"));
+    assertNotNull(segment.getInvertedIndex("column6"));
+    assertNotNull(segment.getDictionary("column6"));
   }
 }
